# dtl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
dtl/: bot.py  consts.py  gifs.py  main.py  sl_client.py  triggers.py  util.py
tests/: test_dtl.py
