[tool.poetry]
name = "dtl"
version = "0.1.0"
description = ""
authors = ["Andrew Liu <liu.andrew.x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.2.3"
python-dotenv = "^1.0.0"
humanize = "^4.6.0"
emoji = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
jedi = "^0.18.2"

[tool.poetry.scripts]
bot = "dtl.main:entrypoint"

[build-system]
requires = ["poetry>=1.5.0"]
build-backend = "poetry.masonry.api"
