[project]
name = "dtl"
version = "0.1.1"
description = ""
authors = [
    { name = "Andrew Liu", email = "liu.andrew.x@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
    "humanize>=4.15.0",
    "emoji>=2.15.0",
]

[project.scripts]
bot = "dtl.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "ruff>=0.3.4",
    "jedi>=0.19.2",
]
